2022-05-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList:
	  Disable a test for targets that cannot complete it within reasonable time.

2022-05-19 Felix Salfelder <felix AT salfelder.org>

	* support/packihx/Makefile.in:
	  packihx: fix build (MAKEDEP related).

2022-05-19 Felix Salfelder <felix AT salfelder.org>

	* support/regression/cases/Makefile.in:
	  avoid segv in __fail, ASSERT(0) instead.

2022-05-18 Felix Salfelder <felix AT salfelder.org>

	* Makefile.common.in, Makefile.in,
	  sdas/*/Makefile.in, src/Makefile.in, src/port.mk:
	  deduplicate dependency generation and fix for ports

2022-05-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Disable a test that tests for QuickC implementation-defined behaviour.

2022-05-18 Felix Salfelder <felix AT salfelder.org>
	
	* Makefile.common.in, configure, configure.ac, src/Makefile.in:
	  C vs. C++ distinction in dependency generation.

2022-05-18 Felix Salfelder <felix AT salfelder.org>

	* support/sdbinutils:
	  Merge upstream GNU Binutils 2.38 (feature request #766).
	* support/regression/Makefile.in:
	  clean-results rule

2022-05-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/setjmp.c,
	  support/regression/tests/loop.c.in:
	  Disable two tests for FreeBSD 13.1, since a known issue from FreeBSD 13.0 is still present.
	* support/regression/MakeList:
	  Disable a test for targets that cannot complete it within reasonable time.
	* support/regression/tests/bug-3385.c:
	  Disable new test for mos6502, where it fails (bug #3386).
	* support/regression/tests/gcc-torture-execute-20040409-?.c:
	  Disable parts of tests that test for GCC implementation-defined behaviour.
	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c,